# growthkit

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GOALS.md  README.md  TODO.md  pyproject.toml
config/: README.md
config/facebook/: ad-account-id.json.example  ad-ids.txt.example  facebook.ini.example
config/facebook/tokens/: tokens-timestamp.json.example
config/mail/: client_secret_id-hash.json.example  metadata.json.example
config/slack/: conversion_tracker.json.example  playwright_creds.json.example  storage_state.json.example  workspace.json.example  workspace.py.example
data/: README.md  rolodex.json.example
data/ads/: eskiin-data-timestamp.csv.example
data/facebook/comments/: comments-timestamp.json.example
data/facebook/pages/: pages-timestamp.json.example
data/mail/exports/: 20250604-introducing-new-product-1973a70bd4c8025c.md.example
data/prompts/: summary_general.txt
data/reports/h1/: h1-growth-report-with-products-2025.md.example
data/slack/: channel_map.json.example
data/transcripts/: growthkit-creative-meeting-2025-02-05-14-55-04-PM.vtt.example
docs/chats/: chat-expand_slack_tool_workspaces.md  chat-folder_structure_packaging.md
docs/notes/: initializing-questions.md
docs/tutorials/: chat-formatting-guide.md
scripts/: README.md  email_export.py  untrack_sensitive_files.sh
src/growthkit/: README.md
tests/: test_clean.py  test_exec_config.py  test_file_selector.py  test_mail_cleaning.py  test_slack_workspace_settings.py  test_truncate_diff.py  test_weekly_platform_mapping.py  test_weekly_products.py  test_weekly_promotions.py
(+46 files in other folders)
